# egui-memetool

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  index.html  style.css
.github/: CONTRIBUTING.md
.github/workflows/: package_app.yml  rust_test.yml  tauri_build.yml
examples/: egui.rs
memetool_shared/: Cargo.toml
memetool_shared/src/: lib.rs
src/: app.rs  background.rs  config.rs  image.rs  image_utils.rs  lib.rs  main.rs  s3_upload.rs  text.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: app-icon.icns
src-tauri/src/: main.rs
src/app/: imagehandler.rs  mod.rs
tests/: test_optimize_image.rs
ui/: index.html
